headless-services/commons/jpql/src/main/java/org/springframework/ide/vscode/parser/cron/CronParser.java
// Generated from CronParser.g4 by ANTLR 4.13.1
package org.springframework.ide.vscode.parser.cron;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CronParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, STAR=2, QUESTION=3, DASH=4, SLASH=5, COMMA=6, L=7, W=8, LW=9, TAG=10, 
		INT=11, MON=12, TUE=13, WED=14, THU=15, FRI=16, SAT=17, SUN=18, JAN=19, 
		FEB=20, MAR=21, APR=22, MAY=23, JUN=24, JUL=25, AUG=26, SEP=27, OCT=28, 
		NOV=29, DEC=30, IDENTIFIER=31, MACRO=32;
	public static final int
		RULE_cronExpression = 0, RULE_secondsElement = 1, RULE_minutesElement = 2, 
		RULE_hoursElement = 3, RULE_daysElement = 4, RULE_monthsElement = 5, RULE_daysOfWeekElement = 6, 
		RULE_cronElement = 7, RULE_rangeCronElement = 8, RULE_terminalCronElement = 9, 
		RULE_periodicCronElement = 10, RULE_rangeCronList = 11, RULE_nthDayOfWeekElement = 12, 
		RULE_lastDayOfWeekElement = 13, RULE_nearestWeekDayToDayOfMonthElement = 14, 
		RULE_lastDayOfMonthElement = 15, RULE_weekdayLiteral = 16, RULE_monthLiteral = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"cronExpression", "secondsElement", "minutesElement", "hoursElement", 
			"daysElement", "monthsElement", "daysOfWeekElement", "cronElement", "rangeCronElement", 
			"terminalCronElement", "periodicCronElement", "rangeCronList", "nthDayOfWeekElement", 
			"lastDayOfWeekElement", "nearestWeekDayToDayOfMonthElement", "lastDayOfMonthElement", 
			"weekdayLiteral", "monthLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'*'", "'?'", "'-'", "'/'", "','", "'L'", "'W'", "'LW'", 
			"'#'", null, "'MON'", "'TUE'", "'WED'", "'THU'", "'FRI'", "'SAT'", "'SUN'", 
			"'JAN'", "'FEB'", "'MAR'", "'APR'", "'MAY'", "'JUN'", "'JUL'", "'AUG'", 
			"'SEP'", "'OCT'", "'NOV'", "'DEC'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "STAR", "QUESTION", "DASH", "SLASH", "COMMA", "L", "W", "LW", 
			"TAG", "INT", "MON", "TUE", "WED", "THU", "FRI", "SAT", "SUN", "JAN", 
			"FEB", "MAR", "APR", "MAY", "JUN", "JUL", "AUG", "SEP", "OCT", "NOV", 
			"DEC", "IDENTIFIER", "MACRO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CronParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CronParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CronExpressionContext extends ParserRuleContext {
		public SecondsElementContext secondsElement() {
			return getRuleContext(SecondsElementContext.class,0);
		}
		public MinutesElementContext minutesElement() {
			return getRuleContext(MinutesElementContext.class,0);
		}
		public HoursElementContext hoursElement() {
			return getRuleContext(HoursElementContext.class,0);
		}
		public DaysElementContext daysElement() {
			return getRuleContext(DaysElementContext.class,0);
		}
		public MonthsElementContext monthsElement() {
			return getRuleContext(MonthsElementContext.class,0);
		}
		public DaysOfWeekElementContext daysOfWeekElement() {
			return getRuleContext(DaysOfWeekElementContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(CronParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(CronParser.WS, i);
		}
		public TerminalNode MACRO() { return getToken(CronParser.MACRO, 0); }
		public CronExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cronExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).enterCronExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).exitCronExpression(this);
		}
	}

	public final CronExpressionContext cronExpression() throws RecognitionException {
		CronExpressionContext _localctx = new CronExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_cronExpression);
		int _la;
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(36);
					match(WS);
					}
					}
					setState(41);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(42);
				secondsElement();
				setState(44); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(43);
					match(WS);
					}
					}
					setState(46); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WS );
				setState(48);
				minutesElement();
				setState(50); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(49);
					match(WS);
					}
					}
					setState(52); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WS );
				setState(54);
				hoursElement();
				setState(56); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(55);
					match(WS);
					}
					}
					setState(58); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WS );
				setState(60);
				daysElement();
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(61);
					match(WS);
					}
					}
					setState(64); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WS );
				setState(66);
				monthsElement();
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(67);
					match(WS);
					}
					}
					setState(70); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WS );
				setState(72);
				daysOfWeekElement();
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(73);
					match(WS);
					}
					}
					setState(78);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(79);
					match(WS);
					}
					}
					setState(84);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(85);
				match(MACRO);
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(86);
					match(WS);
					}
					}
					setState(91);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SecondsElementContext extends ParserRuleContext {
		public CronElementContext cronElement() {
			return getRuleContext(CronElementContext.class,0);
		}
		public SecondsElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_secondsElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).enterSecondsElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).exitSecondsElement(this);
		}
	}

	public final SecondsElementContext secondsElement() throws RecognitionException {
		SecondsElementContext _localctx = new SecondsElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_secondsElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			cronElement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MinutesElementContext extends ParserRuleContext {
		public CronElementContext cronElement() {
			return getRuleContext(CronElementContext.class,0);
		}
		public MinutesElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_minutesElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).enterMinutesElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).exitMinutesElement(this);
		}
	}

	public final MinutesElementContext minutesElement() throws RecognitionException {
		MinutesElementContext _localctx = new MinutesElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_minutesElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			cronElement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HoursElementContext extends ParserRuleContext {
		public CronElementContext cronElement() {
			return getRuleContext(CronElementContext.class,0);
		}
		public HoursElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hoursElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).enterHoursElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).exitHoursElement(this);
		}
	}

	public final HoursElementContext hoursElement() throws RecognitionException {
		HoursElementContext _localctx = new HoursElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_hoursElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			cronElement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DaysElementContext extends ParserRuleContext {
		public NearestWeekDayToDayOfMonthElementContext nearestWeekDayToDayOfMonthElement() {
			return getRuleContext(NearestWeekDayToDayOfMonthElementContext.class,0);
		}
		public LastDayOfMonthElementContext lastDayOfMonthElement() {
			return getRuleContext(LastDayOfMonthElementContext.class,0);
		}
		public CronElementContext cronElement() {
			return getRuleContext(CronElementContext.class,0);
		}
		public DaysElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_daysElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).enterDaysElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).exitDaysElement(this);
		}
	}

	public final DaysElementContext daysElement() throws RecognitionException {
		DaysElementContext _localctx = new DaysElementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_daysElement);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				nearestWeekDayToDayOfMonthElement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				lastDayOfMonthElement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				cronElement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MonthsElementContext extends ParserRuleContext {
		public CronElementContext cronElement() {
			return getRuleContext(CronElementContext.class,0);
		}
		public MonthsElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_monthsElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).enterMonthsElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).exitMonthsElement(this);
		}
	}

	public final MonthsElementContext monthsElement() throws RecognitionException {
		MonthsElementContext _localctx = new MonthsElementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_monthsElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			cronElement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DaysOfWeekElementContext extends ParserRuleContext {
		public NthDayOfWeekElementContext nthDayOfWeekElement() {
			return getRuleContext(NthDayOfWeekElementContext.class,0);
		}
		public LastDayOfWeekElementContext lastDayOfWeekElement() {
			return getRuleContext(LastDayOfWeekElementContext.class,0);
		}
		public CronElementContext cronElement() {
			return getRuleContext(CronElementContext.class,0);
		}
		public DaysOfWeekElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_daysOfWeekElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).enterDaysOfWeekElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).exitDaysOfWeekElement(this);
		}
	}

	public final DaysOfWeekElementContext daysOfWeekElement() throws RecognitionException {
		DaysOfWeekElementContext _localctx = new DaysOfWeekElementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_daysOfWeekElement);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				nthDayOfWeekElement();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				lastDayOfWeekElement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(109);
				cronElement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CronElementContext extends ParserRuleContext {
		public RangeCronListContext rangeCronList() {
			return getRuleContext(RangeCronListContext.class,0);
		}
		public PeriodicCronElementContext periodicCronElement() {
			return getRuleContext(PeriodicCronElementContext.class,0);
		}
		public CronElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cronElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).enterCronElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).exitCronElement(this);
		}
	}

	public final CronElementContext cronElement() throws RecognitionException {
		CronElementContext _localctx = new CronElementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cronElement);
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				rangeCronList();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				periodicCronElement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RangeCronElementContext extends ParserRuleContext {
		public TerminalCronElementContext terminalCronElement() {
			return getRuleContext(TerminalCronElementContext.class,0);
		}
		public List<TerminalNode> DASH() { return getTokens(CronParser.DASH); }
		public TerminalNode DASH(int i) {
			return getToken(CronParser.DASH, i);
		}
		public List<TerminalNode> INT() { return getTokens(CronParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(CronParser.INT, i);
		}
		public List<WeekdayLiteralContext> weekdayLiteral() {
			return getRuleContexts(WeekdayLiteralContext.class);
		}
		public WeekdayLiteralContext weekdayLiteral(int i) {
			return getRuleContext(WeekdayLiteralContext.class,i);
		}
		public List<MonthLiteralContext> monthLiteral() {
			return getRuleContexts(MonthLiteralContext.class);
		}
		public MonthLiteralContext monthLiteral(int i) {
			return getRuleContext(MonthLiteralContext.class,i);
		}
		public RangeCronElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rangeCronElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).enterRangeCronElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).exitRangeCronElement(this);
		}
	}

	public final RangeCronElementContext rangeCronElement() throws RecognitionException {
		RangeCronElementContext _localctx = new RangeCronElementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_rangeCronElement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			terminalCronElement();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DASH) {
				{
				{
				setState(117);
				match(DASH);
				setState(121);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INT:
					{
					setState(118);
					match(INT);
					}
					break;
				case MON:
				case TUE:
				case WED:
				case THU:
				case FRI:
				case SAT:
				case SUN:
					{
					setState(119);
					weekdayLiteral();
					}
					break;
				case JAN:
				case FEB:
				case MAR:
				case APR:
				case MAY:
				case JUN:
				case JUL:
				case AUG:
				case SEP:
				case OCT:
				case NOV:
				case DEC:
					{
					setState(120);
					monthLiteral();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TerminalCronElementContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(CronParser.INT, 0); }
		public WeekdayLiteralContext weekdayLiteral() {
			return getRuleContext(WeekdayLiteralContext.class,0);
		}
		public MonthLiteralContext monthLiteral() {
			return getRuleContext(MonthLiteralContext.class,0);
		}
		public TerminalNode STAR() { return getToken(CronParser.STAR, 0); }
		public TerminalNode QUESTION() { return getToken(CronParser.QUESTION, 0); }
		public TerminalCronElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminalCronElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).enterTerminalCronElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).exitTerminalCronElement(this);
		}
	}

	public final TerminalCronElementContext terminalCronElement() throws RecognitionException {
		TerminalCronElementContext _localctx = new TerminalCronElementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_terminalCronElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				{
				setState(128);
				match(INT);
				}
				break;
			case MON:
			case TUE:
			case WED:
			case THU:
			case FRI:
			case SAT:
			case SUN:
				{
				setState(129);
				weekdayLiteral();
				}
				break;
			case JAN:
			case FEB:
			case MAR:
			case APR:
			case MAY:
			case JUN:
			case JUL:
			case AUG:
			case SEP:
			case OCT:
			case NOV:
			case DEC:
				{
				setState(130);
				monthLiteral();
				}
				break;
			case STAR:
				{
				setState(131);
				match(STAR);
				}
				break;
			case QUESTION:
				{
				setState(132);
				match(QUESTION);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PeriodicCronElementContext extends ParserRuleContext {
		public TerminalCronElementContext terminalCronElement() {
			return getRuleContext(TerminalCronElementContext.class,0);
		}
		public TerminalNode SLASH() { return getToken(CronParser.SLASH, 0); }
		public RangeCronListContext rangeCronList() {
			return getRuleContext(RangeCronListContext.class,0);
		}
		public PeriodicCronElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_periodicCronElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).enterPeriodicCronElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).exitPeriodicCronElement(this);
		}
	}

	public final PeriodicCronElementContext periodicCronElement() throws RecognitionException {
		PeriodicCronElementContext _localctx = new PeriodicCronElementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_periodicCronElement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			terminalCronElement();
			setState(136);
			match(SLASH);
			setState(137);
			rangeCronList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RangeCronListContext extends ParserRuleContext {
		public List<RangeCronElementContext> rangeCronElement() {
			return getRuleContexts(RangeCronElementContext.class);
		}
		public RangeCronElementContext rangeCronElement(int i) {
			return getRuleContext(RangeCronElementContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CronParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CronParser.COMMA, i);
		}
		public RangeCronListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rangeCronList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).enterRangeCronList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).exitRangeCronList(this);
		}
	}

	public final RangeCronListContext rangeCronList() throws RecognitionException {
		RangeCronListContext _localctx = new RangeCronListContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_rangeCronList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			rangeCronElement();
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(140);
				match(COMMA);
				setState(141);
				rangeCronElement();
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NthDayOfWeekElementContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(CronParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(CronParser.INT, i);
		}
		public TerminalNode TAG() { return getToken(CronParser.TAG, 0); }
		public WeekdayLiteralContext weekdayLiteral() {
			return getRuleContext(WeekdayLiteralContext.class,0);
		}
		public NthDayOfWeekElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nthDayOfWeekElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).enterNthDayOfWeekElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).exitNthDayOfWeekElement(this);
		}
	}

	public final NthDayOfWeekElementContext nthDayOfWeekElement() throws RecognitionException {
		NthDayOfWeekElementContext _localctx = new NthDayOfWeekElementContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_nthDayOfWeekElement);
		try {
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				match(INT);
				setState(148);
				match(TAG);
				setState(149);
				match(INT);
				}
				break;
			case MON:
			case TUE:
			case WED:
			case THU:
			case FRI:
			case SAT:
			case SUN:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				weekdayLiteral();
				setState(151);
				match(TAG);
				setState(152);
				match(INT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LastDayOfWeekElementContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(CronParser.INT, 0); }
		public TerminalNode L() { return getToken(CronParser.L, 0); }
		public WeekdayLiteralContext weekdayLiteral() {
			return getRuleContext(WeekdayLiteralContext.class,0);
		}
		public LastDayOfWeekElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lastDayOfWeekElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).enterLastDayOfWeekElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CronParserListener ) ((CronParserListener)listener).exitLastDayOfWeekElement(this);
		}
	}
